--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -1410,7 +1410,7 @@ To assess the fairness of the models and, consequently, the fairness of the enti
 
 \begin{tabular}{|c|c|c|}
     \hline
-    \textbf{Model} & \textbf{Demographic parity ratio} & textbf{Equalized odds ratio} \\
+    \textbf{Model} & \textbf{Demographic parity ratio} & \textbf{Equalized odds ratio} \\
     \hline
     RandomForest Classifier & & \\
     \hline
@@ -1457,7 +1457,7 @@ To assess the fairness of the models and, consequently, the fairness of the enti
 
 \begin{tabular}{|c|c|c|}
     \hline
-    \textbf{Model} & \textbf{Demographic parity ratio} & textbf{Equalized odds ratio} \\
+    \textbf{Model} & \textbf{Demographic parity ratio} & \textbf{Equalized odds ratio} \\
     \hline
     RandomForest Classifier & & \\
     \hline
@@ -1543,7 +1543,7 @@ To assess the fairness of the models and, consequently, the fairness of the enti
 \fi
 
 %----------------------------------------------------------------------------------------
-\chapter{Conclusion}
+\chapter{Conclusion and future works}
 \label{chap:conclusions}
 %----------------------------------------------------------------------------------------
 
