--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -107,11 +107,11 @@ The structure of this thesis unfolds as follows: The \cref{chap:background} cond
 \chapter{State of the Art} % or Background
 \label{chap:background}
 
-This chapter provides a comprehensive overview of the preceding works and the scientific literature that have paved the way for the implementation of fair-by-design methods in our research. The journey begins with a thorough examination of the multifaceted field of \textbf{artificial intelligence} and its wide-ranging applications, including its pivotal roles in critical sectors and socio-technical systems. Within this context, we delve deeply into the intricate issues of \emph{bias} and \emph{fairness} in AI systems, acknowledging the essential foundation upon which our work is built. 
+This chapter provides a comprehensive overview of the preceding works and the scientific literature that have paved the way for the implementation of fair-by-design methods in our research. The journey begins with a thorough examination of the multifaceted field of \emph{artificial intelligence} and its wide-ranging applications, including its pivotal roles in critical sectors and socio-technical systems. Within this context, we delve deeply into the intricate issues of \emph{bias} and \emph{fairness} in AI systems, acknowledging the essential foundation upon which our work is built. 
 
 Artificial Intelligence (\emph{AI}) stands at the forefront of technological innovation, significantly reshaping diverse sectors, from healthcare to finance and transportation. To comprehensively grasp the transformative potential of AI, it is essential to explore its applications and the complex ecosystems in which it operates. This chapter endeavors to unravel the intricate web of AI systems and their profound impact on society.
 
-However, the proliferation of AI brings with it the inherent challenge of bias. As AI systems learn from vast datasets, they may inadvertently perpetuate and exacerbate existing prejudices, resulting in \textbf{bias} within the algorithms. Recognizing this challenge as a critical one, our exploration extends into the various dimensions of bias, highlighting its multifaceted nature and the potential consequences it carries. 
+However, the proliferation of AI brings with it the inherent challenge of bias. As AI systems learn from vast datasets, they may inadvertently perpetuate and exacerbate existing prejudices, resulting in \emph{bias} within the algorithms. Recognizing this challenge as a critical one, our exploration extends into the various dimensions of bias, highlighting its multifaceted nature and the potential consequences it carries. 
 
 Moreover, in our quest for equitable AI, the concept of \emph{fairness} emerges as a beacon of hope. This chapter dissects the concept of fairness within AI systems, exploring the intricate ethical considerations that underlie the pursuit of equitable outcomes for all individuals. The chapter further investigates technical dimensions of fairness, acknowledging that it is not merely a goal but a fundamental ethical principle that underpins our work. 
 
@@ -318,23 +318,23 @@ Oversampling and undersampling are techniques used to address class imbalance, w
 
 \begin{enumerate}
 
-    \item \textbf{Oversampling}
+    \item \emph{Oversampling}
 
     \begin{itemize}
 
-        \item \textbf{Definition:} Oversampling involves increasing the number of instances in the minority class by generating synthetic samples or replicating existing ones.
+        \item \emph{Definition:} Oversampling involves increasing the number of instances in the minority class by generating synthetic samples or replicating existing ones.
         
-        \item \textbf{Fairness Context:} Oversampling aims to boost the representation of underrepresented groups, promoting fairness and equal consideration of all groups. It prevents the model from exhibiting bias towards the majority group.
+        \item \emph{Fairness Context:} Oversampling aims to boost the representation of underrepresented groups, promoting fairness and equal consideration of all groups. It prevents the model from exhibiting bias towards the majority group.
     
     \end{itemize}
 
-    \item \textbf{Undersampling}
+    \item \emph{Undersampling}
 
     \begin{itemize}
 
-        \item \textbf{Definition:} Undersampling involves reducing the number of instances in the majority class by removing samples, ideally in a strategic and unbiased manner.
+        \item \emph{Definition:} Undersampling involves reducing the number of instances in the majority class by removing samples, ideally in a strategic and unbiased manner.
         
-        \item \textbf{Fairness Context:} Undersampling can be employed to level the playing field by reducing the dominance of the majority group. This ensures that the model's predictions are not disproportionately influenced by the majority group, promoting fairness in the model's outcomes.
+        \item \emph{Fairness Context:} Undersampling can be employed to level the playing field by reducing the dominance of the majority group. This ensures that the model's predictions are not disproportionately influenced by the majority group, promoting fairness in the model's outcomes.
     
     \end{itemize}
 
@@ -350,7 +350,7 @@ Data augmentation is a technique often used in machine learning and data preproc
 
 \begin{enumerate}
 
-    \item \textbf{Generating Additional Data for Underrepresented Groups}
+    \item \emph{Generating Additional Data for Underrepresented Groups}
     
     \begin{itemize}
 
@@ -358,7 +358,7 @@ Data augmentation is a technique often used in machine learning and data preproc
     
     \end{itemize}
     
-    \item \textbf{Balancing Class or Group Representation}
+    \item \emph{Balancing Class or Group Representation}
     
     \begin{itemize}
         
@@ -366,7 +366,7 @@ Data augmentation is a technique often used in machine learning and data preproc
     
     \end{itemize}
     
-    \item \textbf{Feature Engineering for Fairness}
+    \item \emph{Feature Engineering for Fairness}
     
     \begin{itemize}
         
@@ -374,7 +374,7 @@ Data augmentation is a technique often used in machine learning and data preproc
     
     \end{itemize}
     
-    \item \textbf{Fair Data Augmentation}
+    \item \emph{Fair Data Augmentation}
     
     \begin{itemize}
     
@@ -464,11 +464,11 @@ Common fairness metrics include disparate impact, equalized odds, demographic pa
 
 \subsection{Disparate Impact}
 
-\textbf{Definition:}
+\emph{Definition:}
 
 Disparate impact measures the ratio of favorable outcomes for different demographic groups. It highlights situations where a particular group experiences a disproportionately adverse impact compared to others.
 
-\textbf{Calculation:}
+\emph{Calculation:}
 \[ DI = \frac{Pr(Y = 1|A=a)}{Pr(Y = 1|A=b)} \]
 
 Where:
@@ -478,36 +478,36 @@ Where:
     \item \( a \) and \( b \) represent different values of the sensitive attribute.
 \end{itemize}
 
-\textbf{Interpretation:}
+\emph{Interpretation:}
 
 A disparate impact value close to 1 indicates fairness, while values significantly deviating from 1 suggest potential bias.
 
 \subsection{Equalized Odds}
 
-\textbf{Definition:}
+\emph{Definition:}
 
 Equalized odds ensures that the true positive rate and false positive rate are similar across different demographic groups. This metric focuses on achieving parity in both the benefits and errors of the model for different groups.
 
-\textbf{Calculation:}
+\emph{Calculation:}
 
 \[ \text{True Positive Rate (TPR)} = \frac{Pr(\hat{Y} = 1|Y = 1, A = a)}{Pr(Y = 1|A = a)} \]
 \[ \text{False Positive Rate (FPR)} = \frac{Pr(\hat{Y} = 1|Y = 0, A = a)}{Pr(Y = 0|A = a)} \]
 
-\textbf{Interpretation:}
+\emph{Interpretation:}
 
 Equalized odds is achieved when the TPR and FPR are approximately equal across all demographic groups.
 
 \subsection{Demographic Parity}
 
-\textbf{Definition:}
+\emph{Definition:}
 
 Demographic parity requires that the proportion of positive outcomes is the same for all demographic groups, regardless of the sensitive attribute.
 
-\textbf{Calculation:}
+\emph{Calculation:}
 
 \[ DP = Pr(\hat{Y} = 1|A = a) - Pr(\hat{Y} = 1|A = b) \]
 
-\textbf{Interpretation:}
+\emph{Interpretation:}
 
 A value close to 0 indicates fairness, suggesting that the model's predictions are not influenced by the sensitive attribute.
 
@@ -684,13 +684,126 @@ The initial step in a fair-by-design workflow involves the precise definition of
             \item Maintain a living document that can be updated as objectives evolve or new insights emerge.
 
         \end{itemize}
-        
+
 \end{itemize}
 
 \subsection{Significance}
 
 Defining objectives with precision, incorporating fairness considerations, and establishing a set of well-defined performance metrics are foundational to a fair-by-design approach. These steps provide a robust framework for subsequent design decisions, ensuring that the system's purpose aligns with ethical principles and stakeholder expectations.
 
+\section{Stakeholder Identification}
+
+Engaging key stakeholders is a fundamental step in shaping the objectives of a fair-by-design workflow. Stakeholders, representing various perspectives and interests, play a crucial role in defining the system's purpose and ensuring its alignment with societal values. Identifying and involving the right stakeholders is essential for a comprehensive understanding of the ethical implications and expectations associated with the system.
+
+\subsection{Key Considerations}
+
+\begin{enumerate}
+
+    \item \emph{Diverse Representation:}
+
+        \begin{itemize}
+
+            \item Ensure the inclusion of stakeholders who represent a diverse range of perspectives, including end-users, developers, decision-makers, and affected communities.
+        
+        \end{itemize}
+    
+    \item \emph{Inclusive Decision-Making:}
+        
+    \begin{itemize}
+    
+        \item Foster an inclusive environment where stakeholders actively participate in decision-making processes related to the system's objectives.
+    
+    \end{itemize}
+    
+    \item \emph{Transparent Communication:}
+    
+    \begin{itemize}
+    
+        \item Maintain transparent communication channels to keep stakeholders informed about the development process and to gather their input effectively.
+    
+    \end{itemize}
+
+\end{enumerate}
+
+\subsection{Detailed Implementation Steps}
+
+\subsubsection{Stakeholder Mapping}
+
+\begin{itemize}
+    
+    \item \emph{Objective:} Identify and map key stakeholders who have a vested interest in the system's development.
+    
+    \item \emph{Implementation:}
+    
+    \begin{itemize}
+    
+        \item Create a stakeholder map that identifies different stakeholder groups and their respective roles and interests.
+    
+        \item Prioritize stakeholders based on their influence on or impact from the system.
+    
+    \end{itemize}
+
+\end{itemize}
+
+\subsubsection{Engagement Strategies}
+
+\begin{itemize}
+
+    \item \emph{Objective:} Develop strategies for effectively engaging stakeholders in the objective-setting process.
+
+    \item \emph{Implementation:}
+
+    \begin{itemize}
+
+        \item Tailor engagement strategies to the characteristics of each stakeholder group (e.g., workshops, surveys, focus groups).
+
+        \item Clearly communicate the importance of their input in shaping the ethical foundations of the system.
+
+    \end{itemize}
+
+\end{itemize}
+
+\subsubsection{Inclusive Workshops or Meetings}
+
+\begin{itemize}
+
+    \item \emph{Objective:} Facilitate inclusive workshops or meetings where stakeholders can actively contribute to defining objectives.
+
+    \item \emph{Implementation:}
+
+    \begin{itemize}
+
+        \item Organize collaborative sessions that encourage open dialogue and the exchange of diverse perspectives.
+
+        \item Provide a platform for stakeholders to express their values, concerns, and expectations related to fairness in the system.
+
+    \end{itemize}
+
+\end{itemize}
+
+\subsubsection{Feedback Collection}
+
+\begin{itemize}
+
+    \item \emph{Objective:} Gather feedback from stakeholders on proposed objectives and ethical considerations.
+
+    \item \emph{Implementation:}
+
+    \begin{itemize}
+
+        \item Utilize surveys, interviews, or online platforms to collect structured feedback.
+
+        \item Encourage stakeholders to provide qualitative insights that may not be captured by quantitative methods.
+
+    \end{itemize}
+
+\end{itemize}
+
+\subsection{Significance}
+
+Stakeholder identification is pivotal for ensuring the fair and inclusive development of a system. By involving stakeholders from diverse backgrounds and perspectives, the ethical considerations embedded in the objectives can more accurately reflect the values and expectations of the broader community.
+
+In the subsequent sections, we will delve into the next steps of the fair-by-design workflow, providing detailed insights into each stage.
 
 
 %----------------------------------------------------------------------------------------
